--- a/style.css
+++ b/style.css
@@ -1,54 +1,28 @@
-
 body {
-  font-family: Arial, sans-serif;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   background: #ffe6e6;
-  color: #b30059;
-  padding-top: 100px;
-  overflow-x: hidden;
-  transition: background 0.5s;
-}
-
-h1 {
-  font-size: 3em;
-  margin-bottom: 50px;
-}
-
-button {
-  font-size: 1.5em;
-  padding: 10px 40px;
-  margin: 10px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-#yes {
-  background-color: pink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   font-family: 'Comic Sans MS', cursive, sans-serif;
-  color: white;
 }
 
-#no {
-  background-color: gray;
-  font-family: Arial, sans-serif;
-  color: black;
+#heartCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* canvas won't block clicks */
+}
+
+#valentineText {
   position: relative;
-}
-
-#message, #final-text {
-  font-size: 2em;
-  margin-top: 50px;
-}
-
-#countdown {
-  font-size: 5em;
-  margin-top: 50px;
+  z-index: 10;
   color: #b30059;
-}
-
-#surprise-img, #kitten-gif {
-  max-width: 80%;
-  margin-top: 30px;
+  font-size: 3em;
+  text-align: center;
 }
